--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
           <div class="one-half column">
             <div class="links-list">
-              <h4>Projectos </h4>
+              <h4>Proyectos </h4>
               <ul>
 
 
