cambio about me

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <div class="links-list">
               <h4>About me</h4>
            <p>
-           Hola!, Soy Facundo, un desarrollador Frontend con experiencia en la creación de interfaces de usuario atractivas y funcionales.Con habilidades en Nextjs con React, usando librerias para estilizar como Tailwind y bootstrap estoy comprometido con el aprendizaje continuo y me dedico a desarrollar aplicaciones en mis tiempos libres. Mantengo mi conocimiento actualizado mediante la exploración de proyectos de código abierto y la participación en comunidades en línea. Estoy emocionado por la oportunidad de contribuir a proyectos innovadores y seguir creciendo profesionalmente en el campo del desarrollo frontend.
+           Hola!, Soy Facundo, un desarrollador Frontend con experiencia en la creación de interfaces de usuario atractivas y funcionales.Con habilidades en Nextjs con React, usando librerias para estilizar como Tailwind y bootstrap estoy comprometido con el aprendizaje continuo y me dedico a desarrollar aplicaciones en mis tiempos libres. Actualmente me encuentro desarrollando mi rol laboral como Analista Funcional, en mi dia a dia realizo seguimiento de proyectos, manuales , soporte y mejora continua, reunion con devs, Testeos y documentacion de estos. Uso herramientas como Trello, Git, Gitlab, Excel, Word y Sql.
 
-            ¡Gracias por tu atención!
+          Espero que te haya interesado mi perfil ¡Gracias por Leer!
            </p>
             </div>
           </div>
