--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
     />
-    <link rel="shortcut icon" href="react.png">
+    <link rel="shortcut icon" href="letra-f.png">
     <link rel="stylesheet" href="style.css" />
     <title>Facundo Fierro Frontend</title>
   </head>
@@ -17,8 +17,8 @@
       <div class="container">
         <div class="row mb">
           <div class="column">
-            <a href="Facundo Front-end.pdf" download="Facundo Front-end" class="logo">Facundo Fierro</a>
-              
+            <a  class="logo">Facundo Fierro</a> 
+            <a class="descargarcv" href="Facundo Front-end.pdf" download="Facundo Front-end" >Descargar CV</a>
             
             <h1 class="header">Tecnologias</h1>
             <div class="logos">
@@ -35,8 +35,8 @@
               <img src="./bootstrap.png" />
             </div>
             <p class="p-tecnologias">
-              -Linux   -Windows -Git -React -Nextjs -Javascript -Firebase
-              -Tailwind -Bootstrap-
+              - Linux  -Windows -Git -React -Nextjs -Javascript -Firebase
+              -Tailwind -Bootstrap- SQL -
             </p>
           </div>
         </div>
