--- a/index.html
+++ b/index.html
@@ -159,8 +159,18 @@
         </div>
       </div>
     </div>
+  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
     <script src="index.js"></script>
+ <div class="footerlogo">
+  <div>
+    <a href="#">
+      <img class="logofinal" src="letra-f.png" alt="">
+      
+    </a>
+  </div>
+</div>
+  
   </body>
 </html>
 
